@@ -1126,11 +1126,9 @@ operations:
 #define jit_ldr_s(d, rs)
 #define jit_ldi_uc(d, is)
 #define jit_ldi_ui(d, is)
-#define jit_ldi_ul(d, is)
 #define jit_ldi_us(d, is)
 #define jit_ldr_uc(d, rs)
 #define jit_ldr_ui(d, rs)
-#define jit_ldr_ul(d, rs)
 #define jit_ldr_us(d, rs)
 #define jit_sti_c(id, rs)
 #define jit_sti_i(id, rs)
@@ -1213,9 +1211,13 @@ operations:
 #define jit_gti_p(d, rs, is)
 #define jit_gtr_p(d, s1, s2)
 #define jit_ldr_p(d, rs)
+#define jit_ldr_ul(d, rs)
 #define jit_ldi_p(d, is)
+#define jit_ldi_ul(d, is)
 #define jit_ldxi_p(d, rs, is)
+#define jit_ldxi_ul(d, rs, is)
 #define jit_ldxr_p(d, s1, s2)
+#define jit_ldxr_ul(d, s1, s2)
 #define jit_lei_p(d, rs, is)
 #define jit_ler_p(d, s1, s2)
 #define jit_lshi_ui(d, rs, is)
@@ -1446,10 +1448,8 @@ operations:
 #define jit_ldr_ui(d, rs)
 #define jit_ldxi_l(d, rs, is)
 #define jit_ldxi_ui(d, rs, is)
-#define jit_ldxi_ul(d, rs, is)
 #define jit_ldxr_l(d, s1, s2)
 #define jit_ldxr_ui(d, s1, s2)
-#define jit_ldxr_ul(d, s1, s2)
 #define jit_lei_l(d, rs, is)
 #define jit_lei_ul(d, rs, is)
 #define jit_ler_l(d, s1, s2)
